roles/cloud_sandbox_infra/templates/cloudformation-sandbox.yml
# Mix of Jinja2 and AWS templating
# Jinja2 templating is used only when absolutely necessary (i.e. for loops) and AWS templating is ued otherwise
# to pass all simple parameters and templating
AWSTemplateFormatVersion: 2010-09-09
Description: Deploys an EC2 instance with a Route53 DNS record allowing SSH and HTTP(S)
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: EC2 instance type
    Type: String
  InstanceSubnetId:
    Type: String
    Description: Subnet ID on which to attach Ec2 instance Network Interface
  VpcId:
    Type: String
    Description: VPC ID under which to deploy network components
  ImageId:
    Description: EC2 instance image ID
    Type: String
  DnsRecordSuffix:
    Description: DNS record suffix for which to create for Route53 pointing to EC2 instance
    Type: String
  HostedZoneName:
    Description: Name of the Route53 Hosted Zone where to create DNS record
    Type: String
  InstanceRootVolumeSize:
    Description: Size of the root volume for the EC2 instance
    Type: Number
    Default: 200

Resources:

{% for ec2_instance in cloud_sandbox_ec2_instances_names %}

  EC2Instance{{ ec2_instance[:1] | upper }}{{ ec2_instance[1:] | lower }}:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
          - !GetAtt InstanceSecurityGroup.GroupId
          SubnetId:
            Ref: InstanceSubnetId
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref InstanceRootVolumeSize

  InstanceDNSRecord{{ ec2_instance[:1] | upper }}{{ ec2_instance[1:] | lower }}:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref HostedZoneName
      Name: !Join [ '.', ['{{ ec2_instance }}', !Ref DnsRecordSuffix] ]
      ResourceRecords:
        - !GetAtt EC2Instance{{ ec2_instance[:1] | upper }}{{ ec2_instance[1:] | lower }}.PublicIp
      TTL: '60'
      Type: A

  InstanceDNSRecord{{ ec2_instance[:1] | upper }}{{ ec2_instance[1:] | lower }}Wild:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref HostedZoneName
      Name: !Join [ '.', ['*.{{ ec2_instance }}', !Ref DnsRecordSuffix] ]
      ResourceRecords:
        - !GetAtt EC2Instance{{ ec2_instance[:1] | upper }}{{ ec2_instance[1:] | lower }}.PublicIp
      TTL: '60'
      Type: A

{% endfor %}

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for an instance of Cloud Sandbox
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8099
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5010
          CidrIp: 0.0.0.0/0
        # Linux local port range
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          CidrIp: 0.0.0.0/0
{% if cloud_sandbox_docker_enabled | bool %}
        # Docker Swarm ports
        # See https://docs.docker.com/network/overlay/#create-an-overlay-network
        - IpProtocol: tcp
          FromPort: 2377
          ToPort: 2377
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7946
          ToPort: 7946
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 7946
          ToPort: 7946
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 4789
          ToPort: 4789
          CidrIp: 0.0.0.0/0
{% endif %}
#Outputs:
#  InstanceId:
#    Description: InstanceId of the newly created EC2 instance
#    Value: !Ref EC2Instance
